@@ -70,6 +70,10 @@
     format. This setting is required for operation <tt>STARTTLS</tt> or
     SMTPS mode.</dd>
 
+  <dt><tt>$TLS_COMPAT</tt></dt>
+  <dd>Disable certain (security) features in TLS in order to maintain
+    maximum compatibility with buggy clients.</dd>
+
   <dt><tt>$TLS_DH_PARAMS</tt></dt>
   <dd>The filename containing the Diffie-Hellman key exchange
     parameters, as generated by <tt>openssl dhparam</tt> or <tt>certtool
